Tree printer is lame